--- a/production/client/main.less
+++ b/production/client/main.less
@@ -1,1 +1,28 @@
+/**
+  Only global level styling exists in this file, if the styling only exists for a page or component,
+  import via ui/stylingsheet folder.
+*/
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400');
+@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed');
 @import '{}/imports/ui/stylingsheets/login.less';
+
+body{
+  font-family: "Roboto Condensed", "Source Sans Pro", "Times New Roman";
+}
+
+h1,h2,h3,h4,h5{
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
+}
+
+h1{
+  font-size: 78px;
+}
+
+p{
+  font-size: 18px;
+}
+
+.full-screen{
+  padding: 0;
+}
