--- a/production/client/main.less
+++ b/production/client/main.less
@@ -5,9 +5,11 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400');
 @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed');
 @import '{}/imports/ui/stylingsheets/login.less';
+@import '{}/imports/ui/stylingsheets/buttons.less';
+@import '{}/imports/ui/stylingsheets/margin-padding.less';
 
 body{
-  font-family: "Roboto Condensed", "Source Sans Pro", "Times New Roman";
+  font-family: "Roboto Condensed", "Source Sans Pro", "Times New Roman", serif;
 }
 
 h1,h2,h3,h4,h5{
@@ -16,7 +18,7 @@ h1,h2,h3,h4,h5{
 }
 
 h1{
-  font-size: 78px;
+  font-size: 86px;
 }
 
 p{
