--- a/production/imports/ui/stylingsheets/login.less
+++ b/production/imports/ui/stylingsheets/login.less
@@ -1,13 +1,81 @@
+@primary: #4CAF50;
+
+.branding{
+  position: absolute;
+  z-index: 100;
+  padding-top: 55px;
+  padding-left: 15px;
+  padding-right: 15px;
+  width: 60%;
+  .life-brand{
+    padding-left: 5%;
+    font-family: "Roboto", sans-serif;
+    font-weight: 300;
+    font-size: 35px;
+  }
+}
+.login-menu{
+  position: absolute;
+  bottom: 0;
+  z-index: 100;
+  padding-bottom: 55px;
+  padding-left: 15px;
+  padding-right: 15px;
+  width: 60%;
+  ul{
+    padding-left: 5%;
+    font-family: "Roboto", sans-serif;
+    font-weight: 300;
+    font-size: 16px;
+    list-style-type: none;
+    margin: 0;
+    overflow: hidden;
+  }
+  li{
+    float: left;
+    padding-right: 50px;
+  }
+  a{
+    color: #000;
+    transition: all 0.3s ease 0s;
+    -moz-transition: all 0.3s ease 0s;
+    -webkit-transition: all 0.3s ease 0s;
+    -o-transition: all 0.3s ease 0s;
+    &:hover,&:focus,&:active{
+      color: #555555;
+      text-decoration: none;
+    }
+  }
+}
+
 .jumbotron-area{
   align-items: center;
   display: flex;
   height: 100vh;
   background-color: #4CAF50;
+
+  background-position: center;
+  background-size: cover;
+}
+.jumbotron-greeting{
+  margin-bottom: 0;
+}
+.jumbotron-title{
+  font-family: "Roboto", sans-serif;
+  font-size: 34px;
+  font-weight: 300;
+  color: #555;
+}
+.jumbotron-details{
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 .information{
+  z-index: 1;
   vertical-align: middle;
   margin: auto;
-  width: 60%;
+  padding-left: 5%;
+  padding-right: 20%;
 }
 
 
@@ -31,6 +99,13 @@
   padding: 15px;
   box-sizing: border-box;
   font-size: 14px;
+  transition: all 0.3s ease 0s;
+  -moz-transition: all 0.3s ease 0s;
+  -webkit-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
+}
+.email-warning{
+  color: #f05959;
 }
 .form input[type="submit"] {
   font-family: "Roboto", sans-serif;
@@ -42,12 +117,18 @@
   padding: 15px;
   color: #FFFFFF;
   font-size: 14px;
-  -webkit-transition: all 0.3 ease;
-  transition: all 0.3 ease;
+  transition: all 0.3s ease 0s;
+  -moz-transition: all 0.3s ease 0s;
+  -webkit-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
   cursor: pointer;
-}
-.form input[type="submit"]:hover,.form input[type="submit"]:active,.form input[type="submit"]:focus {
-  background: #43A047;
+  &:hover, &:active, &:focus{
+    background: #43A047;
+  }
+  &:disabled{
+    cursor: not-allowed;
+    background: #dddddd;
+  }
 }
 .form .message {
   margin: 15px 0 0;
