--- a/production/client/main.less
+++ b/production/client/main.less
@@ -5,7 +5,8 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400');
 @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed');
 @import '{}/imports/ui/stylingsheets/login.less';
-@import '{}/imports/ui/stylingsheets/buttons.less';
+@import '{}/imports/ui/stylingsheets/buttons.less'
+@import '{}/imports/ui/stylingsheets/loading.less';
 @import '{}/imports/ui/stylingsheets/margin-padding.less';
 
 body{
