Navigation system in BETA, stream page begining
Navigation bars are almost done,
search function still needs to be implemented

--- a/production/client/main.less
+++ b/production/client/main.less
@@ -5,12 +5,18 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400');
 @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed');
 @import '{}/imports/ui/stylingsheets/login.less';
-@import '{}/imports/ui/stylingsheets/buttons.less'
+@import '{}/imports/ui/stylingsheets/buttons.less';
 @import '{}/imports/ui/stylingsheets/loading.less';
+@import '{}/imports/ui/stylingsheets/navigation.less';
+@import '{}/imports/ui/stylingsheets/stream.less';
 @import '{}/imports/ui/stylingsheets/margin-padding.less';
 
+*{
+  box-sizing: border-box;
+}
 body{
   font-family: "Roboto Condensed", "Source Sans Pro", "Times New Roman", serif;
+  transition: all 0.5s;
 }
 
 h1,h2,h3,h4,h5{
