Revamped routing and interface improvements

--- a/production/client/main.less
+++ b/production/client/main.less
@@ -1,3 +1,38 @@
+/*! =========================================================
+ *
+ uhs.life - V2.0.0
+*
+* =========================================================
+*
+* Copyright 2016 uhs.life dev team
+ *
+ *                       _oo0oo_
+ *                      o8888888o
+ *                      88" . "88
+ *                      (| -_- |)
+ *                      0\  =  /0
+ *                    ___/`---'\___
+ *                  .' \|     |// '.
+ *                 / \|||  :  |||// \
+ *                / _||||| -:- |||||- \
+ *               |   | \  -  /// |   |
+ *               | \_|  ''\---/''  |_/ |
+ *               \  .-\__  '-'  ___/-. /
+ *             ___'. .'  /--.--\  `. .'___
+ *          ."" '<  `.___\_<|>_/___.' >' "".
+ *         | | :  `- \`.;`\ _ /`;.`/ - ` : | |
+ *         \  \ `_.   \_ __\ /__ _/   .-` /  /
+ *     =====`-.____`.___ \_____/___.-`___.-'=====
+ *                       `=---='
+ *
+ *     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+ *
+ *      Buddha Bless:  "No Bugs, teach assist send api"
+ *
+ * ========================================================= */
+
+
+
 /**
   Only global level styling exists in this file, if the styling only exists for a page or component,
   import via ui/stylingsheet folder.
@@ -34,4 +69,8 @@ p{
 
 .full-screen{
   padding: 0;
+}
+
+.fa-2x {
+  vertical-align: middle;
 }
