--- a/production/imports/ui/stylingsheets/login.less
+++ b/production/imports/ui/stylingsheets/login.less
@@ -14,6 +14,13 @@
     font-size: 35px;
   }
 }
+
+.login-with-google{
+  margin: auto;
+  width: 60%;
+  text-align: center;
+}
+
 .login-menu{
   position: absolute;
   bottom: 0;
@@ -114,7 +121,6 @@
   background: #4CAF50;
   width: 100%;
   border: 0;
-  padding: 15px;
   color: #FFFFFF;
   font-size: 14px;
   transition: all 0.3s ease 0s;
