--- a/production/imports/ui/stylingsheets/buttons.less
+++ b/production/imports/ui/stylingsheets/buttons.less
@@ -1,4 +1,4 @@
-btn{
+.btn{
   font-family: "Roboto", sans-serif;
   font-weight: 300;
   transition: all 0.3s ease 0s;
@@ -12,8 +12,8 @@ btn{
 }
 
 .btn-white{
-  background: #FFFFFF;
-  color: #4CAF50;
+  background: #FFFFFF !important;
+  color: #4CAF50 !important;
   border-color: #f2f2f2;
   transition: all 0.3s ease 0s;
   -moz-transition: all 0.3s ease 0s;
@@ -23,5 +23,38 @@ btn{
     color: #4CAF50;
     background-color: #e8e8e8;
     border-color: #e8e8e8;
+  }
+}
+
+.btn-primary{
+  color: #FFFFFF;
+  background: #4CAF50;
+  &:hover, &:active, &:focus{
+    background: #43A047;
+  }
+  &:disabled{
+    cursor: not-allowed;
+    background: #dddddd;
+  }
+}
+
+.btn-login{
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
+  text-transform: uppercase;
+  outline: 0;
+  background: #4CAF50;
+  width: 100%;
+  border: 0;
+  padding: 15px;
+  color: #FFFFFF;
+  font-size: 20px;
+  cursor: pointer;
+  &:hover, &:active, &:focus{
+    background: #43A047;
+  }
+  &:disabled{
+    cursor: not-allowed;
+    background: #dddddd;
   }
 }
