--- a/production/imports/ui/stylingsheets/navigation.less
+++ b/production/imports/ui/stylingsheets/navigation.less
@@ -1,10 +1,13 @@
 @nav-color: #fff;
+@search-content-color: rgba(226, 225, 224, 0.49);
 .top-nav{
   position: fixed;
+  transition: all 0.5s;
   width: 100%;
   z-index: 3;
   background-color: @nav-color;
   form{
+    display: block;
     width: 100%;
     span{
       position: absolute;
@@ -26,9 +29,30 @@
       border-bottom: 1px solid #b3b3b3;
     }
   }
+  .search-content{
+    background-color: @search-content-color;
+    height: 100vh;
+    h1,h2,h3,h4,h5{
+      margin-top: 0;
+    }
+  }
+  .search-prompt{
+    text-align: center;
+    color: rgb(206, 205, 204);
+    i{
+      font-size: 100px;
+    }
+    p{
+      font-size: 55px;
+    }
+  }
+  .search-result{
+    margin-bottom: 30px;
+    padding: 15px;
+    background-color: #FFFFFF;
+  }
   nav{
     transition: all .5s;
-
     background-color: @nav-color;
     display: flex;
     width: 100%;
@@ -57,7 +81,7 @@
       padding-top: 15px;
       padding-bottom: 15px;
       float:left;
-      width:85%;
+      width:84%;
       text-align: center;
       display: inline-block;
       border-bottom: 1px solid #b3b3b3;
@@ -70,7 +94,7 @@
       padding-top: 15px;
       padding-bottom: 15px;
       float:left;
-      width:7%;
+      width:8%;
       text-align: center;
       display: flex;
       align-items: center;
@@ -87,7 +111,8 @@
 
 .side-nav{
   height: 100%;
-  width: 0;
+  width: 320px;
+  margin-left: -320px;
   position: fixed;
   z-index: 4;
   top: 0;
