--- a/production/imports/ui/stylingsheets/stream.less
+++ b/production/imports/ui/stylingsheets/stream.less
@@ -1,6 +1,35 @@
 .main{
-  transition: margin-left .5s;
+  transition: all .5s;
 }
 .content{
   margin-top: 115px;
+  transition: all .5s;
+}
+
+.button-group{
+  text-align: center;
+  button{
+    background: none;
+    border: none;
+    font-size: 25px;
+    font-family: "Roboto", sans-serif;
+    font-weight: 300;
+  }
+}
+.is-checked{
+  color: @primary;
+}
+.grid-sizer, .grid-item {
+  width: 33.3%;
+  padding: 15px;
+}
+/* 2 columns wide */
+.grid-item--width2 { width: 66.6%; }
+
+.unselectable {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
