--- a/production/imports/ui/stylingsheets/login.less
+++ b/production/imports/ui/stylingsheets/login.less
@@ -96,12 +96,12 @@
   margin: auto;
   width: 60%;
 }
-.form input {
+input {
   font-family: "Roboto", sans-serif;
   outline: 0;
-  background: #f2f2f2;
+  background: #fff;
   width: 100%;
-  border: 0;
+  border: 2px solid #333;
   margin: 0 0 15px;
   padding: 15px;
   box-sizing: border-box;
@@ -110,6 +110,13 @@
   -moz-transition: all 0.3s ease 0s;
   -webkit-transition: all 0.3s ease 0s;
   -o-transition: all 0.3s ease 0s;
+  &:focus{
+    border-color: @primary;
+  }
+  &:disabled{
+    cursor: not-allowed;
+    background: #dddddd;
+  }
 }
 .email-warning{
   color: #f05959;
@@ -136,6 +143,9 @@
     background: #dddddd;
   }
 }
+.form input[type='checkbox']{
+  width: auto;
+}
 .form .message {
   margin: 15px 0 0;
   color: #b3b3b3;
@@ -147,4 +157,8 @@
 }
 .form .register-form {
   display: none;
+}
+
+.full-width{
+  width: 100%;
 }
