--- a/production/client/main.less
+++ b/production/client/main.less
@@ -92,3 +92,21 @@ a{
 *:focus {
   outline: none;
 }
+
+@media screen and (max-width: 1366px){
+  h1{
+    font-size: 56px;
+  }
+  h2{
+    font-size: 35px;
+  }
+  h3{
+    font-size: 25px;
+  }
+  h4{
+    font-size: 18px;
+  }
+  p{
+    font-size: 14px;
+  }
+}
