--- a/production/imports/ui/stylingsheets/buttons.less
+++ b/production/imports/ui/stylingsheets/buttons.less
@@ -75,3 +75,15 @@
   font-size: 16px;
   cursor: pointer;
 }
+
+@media screen and (min-width: 1366px) {
+  .login-with-google{
+    width: 80%;
+  }
+  .btn-login{
+    font-size: 14px;
+  }
+  .btn-lg{
+    padding: 15px 32px;
+  }
+}
