--- a/production/imports/ui/stylingsheets/login.less
+++ b/production/imports/ui/stylingsheets/login.less
@@ -162,3 +162,9 @@ input {
 .full-width{
   width: 100%;
 }
+
+@media screen and (max-width: 1366px){
+  .jumbotron-title{
+    font-size: 25px;
+  }
+}
