--- a/production/imports/ui/stylingsheets/navigation.less
+++ b/production/imports/ui/stylingsheets/navigation.less
@@ -167,4 +167,12 @@
   }
 
 }
+@media screen and (max-width: 1366px) {
+  .top-nav nav .nav-oper{
+    font-size: 18px;
+  }
+  .top-nav nav .nav-extend{
+    font-size: 18px;
+  }
+}
 
