--- a/production/imports/ui/components/editor.html
+++ b/production/imports/ui/components/editor.html
@@ -260,7 +260,7 @@
                 </div>
             </div>
         </div>
-        <div class="container post-type text-center">
+        <div class="container post-type text-center" hidden>
             <div class="row mb-30">
                 <div class="col-lg-12 col-md-12 col-sm-12 mb-30">
                     <h2>Nice,</h2>
