--- a/production/imports/ui/components/navigation.html
+++ b/production/imports/ui/components/navigation.html
@@ -2,7 +2,7 @@
     <div class="top-nav">
         <nav>
             <div class="nav-extend"><span class="side-nav-prompt"><i class="fa fa-bars"></i> MENU</span></div>
-            <div class="nav-hub"><span>Stream | {{date}}</span></div>
+            <div class="nav-hub"><span>{{title}}</span></div>
             <div class="nav-oper"><span class="top-operation-prompt">SEARCH</span></div>
         </nav>
         <div>
