--- a/production/client/main.less
+++ b/production/client/main.less
@@ -49,6 +49,7 @@
 @import '{}/imports/ui/stylingsheets/stream.less';
 @import '{}/imports/ui/stylingsheets/firstTime.less';
 @import '{}/imports/ui/stylingsheets/details.less';
+@import '{}/imports/ui/stylingsheets/course.less';
 @import '{}/imports/ui/stylingsheets/margin-padding.less';
 @light-grey: rgb(236, 235, 234);
 @primary-dark: #43A047;
@@ -128,4 +129,8 @@ a{
   p{
     font-size: 14px;
   }
+}
+
+::selection{
+  background: #b4f8b8;
 }
