--- a/production/imports/ui/components/navigation.html
+++ b/production/imports/ui/components/navigation.html
@@ -3,7 +3,15 @@
         <nav>
             <div class="nav-extend"><span class="side-nav-prompt"><i class="fa fa-bars"></i> MENU</span></div>
             <div class="nav-hub"><span>{{title}}</span></div>
-            <div class="nav-oper"><span class="top-operation-prompt">SEARCH</span></div>
+            <div class="nav-oper">
+                <span class="top-operation-prompt">
+                    {{#if oper}}
+                        CLOSE
+                    {{else}}
+                        SEARCH
+                    {{/ if}}
+                </span>
+            </div>
         </nav>
         <div>
             <form class="global-search">
