--- a/production/imports/ui/stylingsheets/details.less
+++ b/production/imports/ui/stylingsheets/details.less
@@ -46,11 +46,16 @@
     letter-spacing: 2px;
     margin-top: 0;
     font-style: italic;
-    font-size: 14px;  
+    font-size: 14px;
+    font-family: 'Roboto Mono', monospace;
+  }
+  .img-container{
+    width: 80%;
+    margin: auto;
   }
 }
 .author-info{
-  font-family: 'Roboto Mono',Serif;
+  font-family: 'Roboto Mono',monospace;
   a{
     margin-right: 15px;
   }
