Linked backend posting from editor to drafts collection

--- a/production/imports/ui/components/editor.html
+++ b/production/imports/ui/components/editor.html
@@ -12,14 +12,14 @@
             <div class="row">
                 <div class="col-lg-12 col-md-12">
                     <form class="form post-info-form full-width">
-                        <input type="text" placeholder="Title*">
-                        <input type="text" placeholder="Sub-title" name="sub">
+                        <input type="text" placeholder="Title*" id="blogTitle">
+                        <input type="text" placeholder="Sub-title" name="sub" id="blogSubTitle">
                     </form>
                 </div>
             </div>
             <div class="row mb-45">
                 <div class="col-lg-12 col-md-12">
-                    <div class="editable"></div>
+                    <div class="editable" id="blogContent"></div >
                 </div>
             </div>
 
@@ -111,7 +111,7 @@
                 <div class="row">
                     <div class="col-lg-12 col-md-12">
                         <form class="form post-info-form full-width">
-                            <input type="text" placeholder="Headline*">
+                            <input type="text" placeholder="Headline*" id="imageOnlyTitle">
                         </form>
                     </div>
                 </div>
@@ -136,13 +136,13 @@
                 <div class="row">
                     <div class="col-lg-12 col-md-12">
                         <form class="form post-info-form full-width">
-                            <input type="text" placeholder="Headline*">
+                            <input type="text" placeholder="Headline*" id="textOnlyTitle">
                         </form>
                     </div>
                 </div>
                 <div class="row mb-45">
                     <div class="col-lg-12 col-md-12">
-                        <textarea placeholder="Add your information here! 140 characters max." class="announcement-text" maxlength="140"></textarea>
+                        <textarea placeholder="Add your information here! 140 characters max." class="announcement-text" maxlength="140" id="textOnlyText"></textarea>
                     </div>
                 </div>
                 <div class="row mb-45">
@@ -161,14 +161,14 @@
                 <div class="row">
                     <div class="col-lg-12 col-md-12">
                         <form class="form post-info-form full-width">
-                            <input type="text" placeholder="Headline*">
+                            <input type="text" placeholder="Headline*" id="textImageTitle">
                         </form>
                     </div>
                 </div>
                 <div class="row mb-45">
                     <div class="col-lg-12 col-md-12">
                         <h3>Text Portion</h3>
-                        <textarea placeholder="Add your information here! 140 characters max." class="announcement-text" maxlength="140"></textarea>
+                        <textarea placeholder="Add your information here! 140 characters max." class="announcement-text" maxlength="140" id="textImageText"></textarea>
                     </div>
                 </div>
                 <div class="row mb-45">
