--- a/production/client/main.less
+++ b/production/client/main.less
@@ -37,7 +37,7 @@
   Only global level styling exists in this file, if the styling only exists for a page or component,
   import via ui/stylingsheet folder.
 */
-@import url('https://fonts.googleapis.com/css?family=Roboto:300,400');
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,700');
 @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed');
 @import url('https://fonts.googleapis.com/css?family=Roboto+Mono');
 @import url('https://fonts.googleapis.com/css?family=Material+Icons');
@@ -50,6 +50,7 @@
 @import '{}/imports/ui/stylingsheets/firstTime.less';
 @import '{}/imports/ui/stylingsheets/details.less';
 @import '{}/imports/ui/stylingsheets/course.less';
+@import '{}/imports/ui/stylingsheets/alert.less';
 @import '{}/imports/ui/stylingsheets/margin-padding.less';
 @light-grey: rgb(236, 235, 234);
 @primary-dark: #43A047;
