--- a/mobile/client/newsDetail.css
+++ b/mobile/client/newsDetail.css
@@ -3,8 +3,59 @@
     max-width: 600px;
     margin-right: -10px;
     margin-top:  50px;
+    margin-bottom: 50px;
 }
 .news-text{
     text-align: left;
     font-weight: normal;
+}
+
+.tags {
+    list-style: none;
+    margin: 0;
+    overflow: hidden;
+    padding: 0;
+}
+
+.tags li {
+    float: left;
+}
+
+.tag {
+    background: transparent;
+    color: cornflowerblue;
+    border-style: solid;
+    border-width: 1px;
+    display: inline-block;
+    height: 26px;
+    font: 12px/1.5 'PT Sans', serif;
+    line-height: 26px;
+    padding: 0 20px 0 20px;
+    position: relative;
+    margin: 0 10px 10px 0;
+    text-decoration: none;
+    -webkit-transition: color 0.2s;
+
+}
+
+.tag::after {
+    background: #fff;
+    content: '';
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+
+.tag:hover {
+    background-color: cornflowerblue;
+    color: white;
+}
+
+hr {
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 1px solid #ccc;
+    margin: 1em 0;
+    padding: 0;
 }
