--- a/mobile/imports/ui/components/sidebar.html
+++ b/mobile/imports/ui/components/sidebar.html
@@ -1,23 +1,18 @@
 <template name="sidebar">
     <div id="mySidenav" class="sidenav">
         <div class="side-nav-content">
-            <span>Main</span>
+            <h1>CATEGORIES</h1>
             <ul>
                 <li>
-                    <a href="/overview" id="overview">Courses</a>
+                    <a href="#" id="overview">Eco-Action</a>
                 </li>
                 <li>
-                    <a href="/news" id="news">News</a>
+                    <a href="#" id="news">Admin</a>
                 </li>
                 <li>
-                    <a href="#" id="utils">Utilities</a>
+                    <a href="#" id="utils">Science Dept</a>
                 </li>
             </ul>
-            <div class="float-bottom text-center">
-                <div class="logoutButton center">
-                    <p class="logoutText" id="logoutText">Logout</p>
-                </div>
-            </div>
         </div>
     </div>
 </template>
