added categories, tags for blogs, bulletproofed regexes

--- a/production/imports/ui/components/editor.html
+++ b/production/imports/ui/components/editor.html
@@ -31,7 +31,7 @@
                             <span>Add tags so students can easily find your post!</span>
                         </div>
                         <div class="card-body">
-                            <input type="text" placeholder="write tags, separate different tags with comma">
+                            <input type="text" placeholder="write tags, separate different tags with comma" id="blogTags">
                             <h4>Your Tags:</h4>
                             <p>Tag A, Tag B, </p>
                         </div>
