Editor Partial Update

--- a/production/imports/ui/stylingsheets/editor.less
+++ b/production/imports/ui/stylingsheets/editor.less
@@ -52,7 +52,7 @@
   }
 }
 .card-head{
-  margin-bottom: 35px;
+  margin-bottom: 20px;
 }
 .editable{
   font-size: 25px;
@@ -395,3 +395,38 @@ i.material-icons:hover {
 .fr-toolbar{
   border-top: none;
 }
+.bootstrap-tagsinput{
+  width: 75%;
+  font-family: "Roboto", sans-serif;
+  outline: 0;
+  background: #fff;
+  border: 2px solid #999;
+  margin: 0 0 15px;
+  padding: 10px;
+  box-sizing: border-box;
+  font-size: 14px;
+  border-radius: 0;
+  transition: all 0.3s ease 0s;
+  -moz-transition: all 0.3s ease 0s;
+  -webkit-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
+  &:focus{
+    border: 2px solid @primary;
+  }
+}
+.label-info{
+  background: @primary;
+}
+.select2-container{
+  z-index: 10000;
+}
+.select2-container--default .select2-selection--multiple{
+  border: 2px solid #999;
+  border-radius: 0;
+}
+.select2-search__field{
+  margin-bottom: 0;
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
