--- a/production/imports/ui/components/editor.html
+++ b/production/imports/ui/components/editor.html
@@ -26,26 +26,40 @@
             <div class="row mb-60">
                 <div class="col-md-6 col-lg-6">
                     <div class="editor-card">
-                        <div class="card-head">
-                            <h3>Tags &amp; Categories</h3>
-                            <span>Add tags so students can easily find your post!</span>
-                        </div>
                         <div class="card-body">
-                            <input type="text" placeholder="write tags, separate different tags with comma" id="blogTags">
-                            <h4>Your Tags:</h4>
-                            <p>Tag A, Tag B, </p>
+                            <h3>Add Some Tags</h3>
+                            <p>By adding some tags, other users can more easily find your post by search. To add a tag, simply write in the text box below, hit enter after every tag.</p>
+                            <input data-role="tagsinput" class="tags" placeholder="Write your tags here">
+                            <hr />
+                            <h3>Select Categories</h3>
+                            <p>By selecting the categories this post belongs to, we can improve the user feed experience. To select click on the box below and pick an option from the drop up box, you can choose multiple if needed.</p>
+                            <select name="category-selector" class="category-select" multiple style="width: 75%">
+                                <option value="1">Mustard</option>
+                                <option value="2">Ketchup</option>
+                                <option value="3">Relish</option>
+                                <option value="angular">Angular</option>
+                                <option value="css">CSS</option>
+                                <option value="design">Graphic Design</option>
+                            </select>
+
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-6">
                     <div class="editor-card">
-                        <div class="card-head">
-                            <h3>Settings</h3>
-                            <span>Modify the settings for the post, for more information visit <a href="help">here</a>.</span>
-                        </div>
                         <div class="card-body">
-                            <h4>Featured Image</h4>
+                            <h3>Featured Splash Image</h3>
+                            <p>Upload an image to help attract users to your blog, stock photos work well, avoid images with text. Please credit the photographer with the form below.</p>
                             <form action="/file-upload" class="dropzone" id="dropzone"></form>
+                            <h4 id="unsplashPrompt">Want to avoid the hassle? <a href="" id="getFeaturedUnsplash">Click here</a> and we will pick an image for you!</h4>
+                            <hr />
+                            <h3>Pick a release date</h3>
+                            <p>Use the date selector bellow to select the day you would like this post published.</p>
+                            <div class="input-group input-daterange">
+                                <input type="text" class="form-control">
+                                <div class="input-group-addon">to</div>
+                                <input type="text" class="form-control">
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -115,14 +129,42 @@
                         </form>
                     </div>
                 </div>
-                <div class="row mb-45">
+                <div class="row">
                     <div class="col-lg-12 col-md-12">
                         <form action="/file-upload" class="dropzone" id="announcementImage"></form>
                     </div>
                 </div>
+                <div class="row mb-45 text-left">
+                    <div class="col-lg-4 col-md-3">
+                        <h3>Add Some Tags</h3>
+                        <p>By adding some tags, other users can more easily find your post by search. To add a tag, simply write in the text box below, hit enter after every tag.</p>
+                        <input data-role="tagsinput" class="tags" placeholder="Write your tags here">
+                    </div>
+                    <div class="col-lg-4 col-md-3">
+                        <h3>Select Categories</h3>
+                        <p>By selecting the categories this post belongs to, we can improve the user feed experience. To select click on the box below and pick an option from the drop up box, you can choose multiple if needed.</p>
+                        <select name="category-selector" class="category-select" multiple style="width: 75%">
+                            <option value="1">Mustard</option>
+                            <option value="2">Ketchup</option>
+                            <option value="3">Relish</option>
+                            <option value="angular">Angular</option>
+                            <option value="css">CSS</option>
+                            <option value="design">Graphic Design</option>
+                        </select>
+                    </div>
+                    <div class="col-lg-4 col-md-3">
+                        <h3>Pick a release date</h3>
+                        <p>Use the date selector bellow to select the day you would like this post published.</p>
+                        <div class="input-group input-daterange">
+                            <input type="text" class="form-control">
+                            <div class="input-group-addon">to</div>
+                            <input type="text" class="form-control">
+                        </div>
+                    </div>
+                </div>
                 <div class="row mb-45">
                     <div class="col-lg-12 col-md-12">
-                        <button class="btn btn-login">POST</button>
+                        <button class="btn btn-login btn-post">POST</button>
                     </div>
                 </div>
             </div>
@@ -140,14 +182,42 @@
                         </form>
                     </div>
                 </div>
-                <div class="row mb-45">
+                <div class="row">
                     <div class="col-lg-12 col-md-12">
                         <textarea placeholder="Add your information here! 140 characters max." class="announcement-text" maxlength="140" id="textOnlyText"></textarea>
                     </div>
                 </div>
+                <div class="row mb-45 text-left">
+                    <div class="col-lg-4 col-md-3">
+                        <h3>Add Some Tags</h3>
+                        <p>By adding some tags, other users can more easily find your post by search. To add a tag, simply write in the text box below, hit enter after every tag.</p>
+                        <input data-role="tagsinput" class="tags" placeholder="Write your tags here">
+                    </div>
+                    <div class="col-lg-4 col-md-3">
+                        <h3>Select Categories</h3>
+                        <p>By selecting the categories this post belongs to, we can improve the user feed experience. To select click on the box below and pick an option from the drop up box, you can choose multiple if needed.</p>
+                        <select name="category-selector" class="category-select" multiple style="width: 75%">
+                            <option value="1">Mustard</option>
+                            <option value="2">Ketchup</option>
+                            <option value="3">Relish</option>
+                            <option value="angular">Angular</option>
+                            <option value="css">CSS</option>
+                            <option value="design">Graphic Design</option>
+                        </select>
+                    </div>
+                    <div class="col-lg-4 col-md-3">
+                        <h3>Pick a release date</h3>
+                        <p>Use the date selector bellow to select the day you would like this post published.</p>
+                        <div class="input-group input-daterange">
+                            <input type="text" class="form-control">
+                            <div class="input-group-addon">to</div>
+                            <input type="text" class="form-control">
+                        </div>
+                    </div>
+                </div>
                 <div class="row mb-45">
                     <div class="col-lg-12 col-md-12">
-                        <btn class="btn btn-login">POST</btn>
+                        <btn class="btn btn-login btn-post">POST</btn>
                     </div>
                 </div>
             </div>
@@ -176,9 +246,37 @@
                         <form action="/file-upload" class="dropzone" id="announcementImageTwo"></form>
                     </div>
                 </div>
+                <div class="row mb-45 text-left">
+                    <div class="col-lg-4 col-md-3">
+                        <h3>Add Some Tags</h3>
+                        <p>By adding some tags, other users can more easily find your post by search. To add a tag, simply write in the text box below, hit enter after every tag.</p>
+                        <input data-role="tagsinput" class="tags" placeholder="Write your tags here">
+                    </div>
+                    <div class="col-lg-4 col-md-3">
+                        <h3>Select Categories</h3>
+                        <p>By selecting the categories this post belongs to, we can improve the user feed experience. To select click on the box below and pick an option from the drop up box, you can choose multiple if needed.</p>
+                        <select name="category-selector" class="category-select" multiple style="width: 75%">
+                            <option value="1">Mustard</option>
+                            <option value="2">Ketchup</option>
+                            <option value="3">Relish</option>
+                            <option value="angular">Angular</option>
+                            <option value="css">CSS</option>
+                            <option value="design">Graphic Design</option>
+                        </select>
+                    </div>
+                    <div class="col-lg-4 col-md-3">
+                        <h3>Pick a release date</h3>
+                        <p>Use the date selector bellow to select the day you would like this post published.</p>
+                        <div class="input-group input-daterange">
+                            <input type="text" class="form-control">
+                            <div class="input-group-addon">to</div>
+                            <input type="text" class="form-control">
+                        </div>
+                    </div>
+                </div>
                 <div class="row mb-45">
                     <div class="col-lg-12 col-md-12">
-                        <button class="btn btn-login">POST</button>
+                        <button class="btn btn-login btn-post">POST</button>
                     </div>
                 </div>
             </div>
