--- a/mobile/client/searchBar.css
+++ b/mobile/client/searchBar.css
@@ -38,11 +38,11 @@
 
 .fa-search{
     position: relative;
-    right: 30px;
+    right: 40px;
 }
 
 .hamburger{
     position: absolute;
-    top: 0;
-    left: -7px;
+    top: -2px;
+    left: -5px;
 }
